# pyxel-example-platformer

./: assets.pyxres  game.py  pyproject.toml
